# PACSMAN_data

./: .gitignore  .zenodo.json  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
conda/: environment.yml
data/dicomseries/: slice0.dcm  slice1.dcm  slice10.dcm  slice100.dcm  slice101.dcm  slice102.dcm  slice103.dcm  slice104.dcm  slice105.dcm  slice106.dcm  slice107.dcm  slice108.dcm  slice109.dcm  slice11.dcm  slice110.dcm  slice111.dcm  slice112.dcm  slice113.dcm  slice114.dcm  slice115.dcm  slice116.dcm  slice117.dcm  slice118.dcm  slice119.dcm  slice12.dcm  slice120.dcm  slice121.dcm  slice122.dcm  slice123.dcm  slice124.dcm  slice125.dcm  slice126.dcm  slice127.dcm  slice13.dcm  slice14.dcm  slice15.dcm  slice16.dcm  slice17.dcm  slice18.dcm  slice19.dcm  (+88 more)
pacsman_data/: __init__.py  cli.py  exceptions.py  generate_dummy_images.py
pacsman_data/data/bids/: sub-000001_T1w.json
pacsman_data/data/dicomseries/: slice0.dcm  slice1.dcm  slice10.dcm  slice100.dcm  slice101.dcm  slice102.dcm  slice103.dcm  slice104.dcm  slice105.dcm  slice106.dcm  slice107.dcm  slice108.dcm  slice109.dcm  slice11.dcm  slice110.dcm  slice111.dcm  slice112.dcm  slice113.dcm  slice114.dcm  slice115.dcm  slice116.dcm  slice117.dcm  slice118.dcm  slice119.dcm  slice12.dcm  slice120.dcm  slice121.dcm  slice122.dcm  slice123.dcm  slice124.dcm  slice125.dcm  slice126.dcm  slice127.dcm  slice13.dcm  slice14.dcm  slice15.dcm  slice16.dcm  slice17.dcm  slice18.dcm  slice19.dcm  (+88 more)
tests/: __init__.py  test_cli.py  test_pacsman_data.py
